# prism

./: .gitignore  .mcp.json  .mcp.json.template  CLAUDE.md  HANDOFF.md  README.md  RUN-LOG.md  SECURITY.md  SPRINT-JOURNAL.md  index.html  package-lock.json  package.json
.claude/: HANDOFF-omniharmonic.md  ISSUE-vault-start-race.md  claude-code-agent-architecture.md  parachute-0.5-migration-plan.md  parachute-alignment-skill.md  phase-9-gap-plan.md  prism-implementation-plan.md  prism-parachute-alignment-plan.md  prism-prd-v3.md  prism-skill-upgrade-plan.md  prism-technical-architecture.md  skill-daily-briefing.md  skill-intelligence-scan.md  skill-meeting-processor.md  (+8 more)
.claude-plugin/: README.md  plugin.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/examples/: recurring_skill_eval.rs
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs
src-tauri/src/auth/: mod.rs
src-tauri/src/clients/: anthropic.rs  google.rs  matrix.rs  mcp_client.rs  mod.rs  model_router.rs  ollama.rs  openai_compat.rs  parachute.rs
src-tauri/src/commands/: agent.rs  config.rs  convert.rs  github_cmds.rs  google.rs  matrix.rs  message_index.rs  mod.rs  notion_db_cmds.rs  ollama_cmds.rs  service_cmds.rs  sync_cmds.rs  vault.rs
src-tauri/src/models/: email.rs  link.rs  note.rs  sync_config.rs
src-tauri/src/services/: agent_dispatch.rs  calendar_sync.rs  email_sync.rs  message_sync.rs  mod.rs  person_linker.rs  skill_scheduler.rs  transcript_sync.rs
src-tauri/src/sync/: engine.rs
src-tauri/src/sync/adapters/: github.rs  google_docs.rs  mod.rs  notion.rs  notion_db.rs
(+377 files in other folders)
